Bruk Mattilsynets farger

--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -58,12 +58,12 @@ table {
 a:link, a:visited, .clickable {
   cursor: pointer;
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
   color: var(--link-color);
 }
 
 a:hover, .clickable:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .bq {
@@ -164,6 +164,10 @@ a:hover, .clickable:hover {
 .text-content dd code {
   background: var(--code-bg);
   padding: 2px 3px;
+}
+
+.text-content a code {
+  background: transparent;
 }
 
 .text-content dt {
