--- a/resources/public/css/syntax-highlight.css
+++ b/resources/public/css/syntax-highlight.css
@@ -19,23 +19,23 @@ code, .code, .codehilite {
 .codehilite .k { color: var(--hl-keyword) } /* Keyword */
 .codehilite .cm { color: var(--hl-comment) } /* Comment.Multiline */
 .codehilite .cp { color: var(--hl-preproc-comment) } /* Comment.Preproc */
-.codehilite .c1 { color: var(--comment) } /* Comment.Single */
-.codehilite .cs { color: var(--comment) } /* Comment.Special */
+.codehilite .c1 { color: var(--hl-comment) } /* Comment.Single */
+.codehilite .cs { color: var(--hl-comment) } /* Comment.Special */
 .codehilite .ge { font-style: italic } /* Generic.Emph */
 .codehilite .gh { font-weight: bold } /* Generic.Heading */
 .codehilite .gp { font-weight: bold } /* Generic.Prompt */
 .codehilite .gs { font-weight: bold } /* Generic.Strong */
 .codehilite .gu { font-weight: bold } /* Generic.Subheading */
-.codehilite .kc { color: var(--constant) } /* Keyword.Constant */
-.codehilite .kd { color: var(--declaration) } /* Keyword.Declaration */
-.codehilite .kn { color: var(--namespace) } /* Keyword.Namespace */
-.codehilite .kp { color: var(--pseudo) } /* Keyword.Pseudo */
-.codehilite .kr { color: var(--reserved) } /* Keyword.Reserved */
-.codehilite .kt { color: var(--type) } /* Keyword.Type */
-.codehilite .s { color: var(--string) } /* Literal.String */
-.codehilite .nc { color: var(--class) } /* Name.Class */
-.codehilite .ow { color: var(--word) } /* Operator.Word */
-.codehilite .sb { color: var(--backtick-string) } /* Literal.String.Backtick */
+.codehilite .kc { color: var(--hl-constant) } /* Keyword.Constant */
+.codehilite .kd { color: var(--hl-declaration); font-weight: bold; } /* Keyword.Declaration */
+.codehilite .kn { color: var(--hl-namespace) } /* Keyword.Namespace */
+.codehilite .kp { color: var(--hl-pseudo) } /* Keyword.Pseudo */
+.codehilite .kr { color: var(--hl-reserved) } /* Keyword.Reserved */
+.codehilite .kt { color: var(--hl-type) } /* Keyword.Type */
+.codehilite .s { color: var(--hl-string) } /* Literal.String */
+.codehilite .nc { color: var(--hl-class) } /* Name.Class */
+.codehilite .ow { color: var(--hl-word) } /* Operator.Word */
+.codehilite .sb { color: var(--hl-backtick-string) } /* Literal.String.Backtick */
 .codehilite .sc { color: var(--hl-string-char) } /* Literal.String.Char */
 .codehilite .sd { color: var(--hl-string-doc) } /* Literal.String.Doc */
 .codehilite .s2 { color: var(--hl-string-double) } /* Literal.String.Double */
