--- a/resources/public/css/vars.css
+++ b/resources/public/css/vars.css
@@ -1,67 +1,63 @@
 :root {
-  --jet: #363636;
-  --smoky: #0A0908;
-  --athens: #e6e9f0;
-  --athens-tr: rgba(230, 233, 240, 0.7);
-  --mystic: #eef1f5;
-
-  --ruby: #e8175d;
-  --lima: #72B01D;
-  --denim: #1384e2;
-  --fulvors: #e28413;
-  --lightbw: #f9f9fc;
-  --manatee: #999ca0;
+  --tundora: #403f3f;
+  --smoky: #0a0908;
+  --hillary: #adaa8a;
+  --dawn-pink: #f1eadf;
+  --alizarin-crimson: #e23128;
+  --lucky: #afb71a;
+  --venice-blue: #075a78;
+  --astral: #338ba3;
+  --spring-wood: #f9f6f1;
+  --botticelli: #d4e7ec;
 
   --fg-color: var(--smoky);
-  --dark-fg-color: var(--lightbw);
   --section-bg: #fff;
   --section-fg: var(--smoky);
-  --link-color: var(--denim);
-  --code-bg: var(--lightbw);
-  --code-contrast: var(--lima);
-  --header-bg: var(--mystic);
+  --link-color: var(--venice-blue);
+  --code-bg: var(--spring-wood);
+  --code-contrast: var(--lucky);
+  --header-bg: var(--dawn-pink);
   --header-fg: var(--fg-color);
-  --code-high-contrast: var(--jet);
-  --quote-border: var(--ruby);
-  --subtle: var(--manatee);
-  --byline-border: var(--athens);
-  --byline-color: var(--manatee);
-  --teaser-border: var(--athens);
-  --hl-comment: var(--lima);
-  --hl-preproc-comment : var(--denim);
-  --hl-keyword: var(--denim);
-  --hl-constant: var(--denim);
-  --hl-declaration: var(--denim);
-  --hl-namespace: var(--denim);
-  --hl-pseudo: var(--denim);
-  --hl-reserved: var(--denim);
-  --hl-type: var(--fulvors);
-  --hl-string: var(--ruby);
-  --hl-class : var(--fulvors);
-  --hl-word : var(--denim);
-  --hl-backtick-string : var(--ruby);
-  --hl-string-char: var(--ruby);
-  --hl-string-doc: var(--ruby);
-  --hl-string-double: var(--ruby);
-  --hl-string-escape: var(--ruby);
-  --hl-string-heredoc: var(--ruby);
-  --hl-string-interpol: var(--ruby);
-  --hl-string-other: var(--ruby);
-  --hl-string-regex: var(--ruby);
-  --hl-string-single: var(--ruby);
-  --hl-string-symbol: var(--ruby);
-  --hl-macro: var(--ruby);
-  --hl-core-fn: var(--denim);
-  --hl-variable: var(--denim);
-  --hl-number: var(--denim);
-  --hl-s-exp: var(--ruby);
-  --hl-special-form: var(--lima);
-  --hl-reader-char: var(--ruby);
-  --hl-nil: var(--denim);
-  --hl-repeat: var(--ruby);
-  --hl-regexp: var(--ruby);
-  --hl-exception: var(--lima);
-  --hl-boolean: var(--lima);
-  --hl-character: var(--denim);
-  --hl-conditional: var(--lima);
+  --quote-border: var(--alizarin-crimson);
+  --subtle: var(--botticelli);
+  --byline-border: var(--hillary);
+  --byline-color: var(--botticelli);
+  --teaser-border: var(--hillary);
+  --hl-comment: var(--lucky);
+  --hl-preproc-comment : var(--venice-blue);
+  --hl-keyword: var(--venice-blue);
+  --hl-constant: var(--venice-blue);
+  --hl-declaration: var(--venice-blue);
+  --hl-namespace: var(--venice-blue);
+  --hl-pseudo: var(--venice-blue);
+  --hl-reserved: var(--venice-blue);
+  --hl-type: var(--astral);
+  --hl-string: var(--alizarin-crimson);
+  --hl-class : var(--astral);
+  --hl-word : var(--venice-blue);
+  --hl-backtick-string : var(--alizarin-crimson);
+  --hl-string-char: var(--alizarin-crimson);
+  --hl-string-doc: var(--alizarin-crimson);
+  --hl-string-double: var(--alizarin-crimson);
+  --hl-string-escape: var(--alizarin-crimson);
+  --hl-string-heredoc: var(--alizarin-crimson);
+  --hl-string-interpol: var(--alizarin-crimson);
+  --hl-string-other: var(--alizarin-crimson);
+  --hl-string-regex: var(--alizarin-crimson);
+  --hl-string-single: var(--alizarin-crimson);
+  --hl-string-symbol: var(--alizarin-crimson);
+  --hl-macro: var(--alizarin-crimson);
+  --hl-core-fn: var(--venice-blue);
+  --hl-variable: var(--venice-blue);
+  --hl-number: var(--venice-blue);
+  --hl-s-exp: var(--alizarin-crimson);
+  --hl-special-form: var(--lucky);
+  --hl-reader-char: var(--alizarin-crimson);
+  --hl-nil: var(--venice-blue);
+  --hl-repeat: var(--alizarin-crimson);
+  --hl-regexp: var(--alizarin-crimson);
+  --hl-exception: var(--lucky);
+  --hl-boolean: var(--lucky);
+  --hl-character: var(--venice-blue);
+  --hl-conditional: var(--lucky);
 }
