--- a/resources/public/css/vars.css
+++ b/resources/public/css/vars.css
@@ -21,8 +21,8 @@
   --quote-border: var(--alizarin-crimson);
   --subtle: var(--botticelli);
   --byline-border: var(--hillary);
-  --byline-color: var(--botticelli);
-  --teaser-border: var(--hillary);
+  --byline-color: var(--astral);
+  --teaser-border: var(--dawn-pink);
   --hl-comment: var(--lucky);
   --hl-preproc-comment : var(--venice-blue);
   --hl-keyword: var(--venice-blue);
