--- a/resources/public/css/vars.css
+++ b/resources/public/css/vars.css
@@ -17,7 +17,7 @@
   --code-bg: var(--spring-wood);
   --code-contrast: var(--lucky);
   --header-bg: var(--dawn-pink);
-  --header-fg: var(--fg-color);
+  --header-fg: var(--alizarin-crimson);
   --quote-border: var(--alizarin-crimson);
   --subtle: var(--botticelli);
   --byline-border: var(--hillary);
