Lett styling for å se ørlitegrann mer ut som Mattilsynet

--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -390,6 +390,8 @@ body .text-content :last-child {
   div.hide-mobile {display: block;}
   span.hide-mobile {display: inline;}
 
+  .header.section .desc { margin-top: 1rem; }
+
   .header-content {
     display: flex;
     margin-top: 0;
