--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -290,11 +290,13 @@ a:hover .anchor-marker {
   display: block;
 }
 
-.text-content .h1 {
+.text-content .h1,
+.text-content h1 {
   margin: 0 0 2.4rem;
 }
 
-.text-content .h2 {
+.text-content .h2,
+.text-content h2 {
   margin: 2.4rem 0 1.5rem;
 }
 
