Gjør klart for eksport/bygg

--- a/resources/public/css/vars.css
+++ b/resources/public/css/vars.css
@@ -3,9 +3,9 @@
   --smoky: #0a0908;
   --hillary: #adaa8a;
   --dawn-pink: #f1eadf;
-  --alizarin-crimson: #e23128;
+  --alizarin: #e23128;
   --lucky: #afb71a;
-  --venice-blue: #075a78;
+  --venice: #075a78;
   --astral: #338ba3;
   --spring-wood: #f9f6f1;
   --botticelli: #d4e7ec;
@@ -13,51 +13,51 @@
   --fg-color: var(--smoky);
   --section-bg: #fff;
   --section-fg: var(--smoky);
-  --link-color: var(--venice-blue);
+  --link-color: var(--venice);
   --code-bg: var(--spring-wood);
   --code-contrast: var(--lucky);
   --header-bg: var(--dawn-pink);
-  --header-fg: var(--alizarin-crimson);
-  --quote-border: var(--alizarin-crimson);
+  --header-fg: var(--alizarin);
+  --quote-border: var(--alizarin);
   --subtle: var(--botticelli);
   --byline-border: var(--hillary);
   --byline-color: var(--astral);
   --teaser-border: var(--dawn-pink);
   --hl-comment: var(--lucky);
-  --hl-preproc-comment : var(--venice-blue);
-  --hl-keyword: var(--venice-blue);
-  --hl-constant: var(--venice-blue);
-  --hl-declaration: var(--venice-blue);
-  --hl-namespace: var(--venice-blue);
-  --hl-pseudo: var(--venice-blue);
-  --hl-reserved: var(--venice-blue);
+  --hl-preproc-comment : var(--venice);
+  --hl-keyword: var(--venice);
+  --hl-constant: var(--venice);
+  --hl-declaration: var(--venice);
+  --hl-namespace: var(--venice);
+  --hl-pseudo: var(--venice);
+  --hl-reserved: var(--venice);
   --hl-type: var(--astral);
-  --hl-string: var(--alizarin-crimson);
+  --hl-string: var(--alizarin);
   --hl-class : var(--astral);
-  --hl-word : var(--venice-blue);
-  --hl-backtick-string : var(--alizarin-crimson);
-  --hl-string-char: var(--alizarin-crimson);
-  --hl-string-doc: var(--alizarin-crimson);
-  --hl-string-double: var(--alizarin-crimson);
-  --hl-string-escape: var(--alizarin-crimson);
-  --hl-string-heredoc: var(--alizarin-crimson);
-  --hl-string-interpol: var(--alizarin-crimson);
-  --hl-string-other: var(--alizarin-crimson);
-  --hl-string-regex: var(--alizarin-crimson);
-  --hl-string-single: var(--alizarin-crimson);
-  --hl-string-symbol: var(--alizarin-crimson);
-  --hl-macro: var(--alizarin-crimson);
-  --hl-core-fn: var(--venice-blue);
-  --hl-variable: var(--venice-blue);
-  --hl-number: var(--venice-blue);
-  --hl-s-exp: var(--alizarin-crimson);
+  --hl-word : var(--venice);
+  --hl-backtick-string : var(--alizarin);
+  --hl-string-char: var(--alizarin);
+  --hl-string-doc: var(--alizarin);
+  --hl-string-double: var(--alizarin);
+  --hl-string-escape: var(--alizarin);
+  --hl-string-heredoc: var(--alizarin);
+  --hl-string-interpol: var(--alizarin);
+  --hl-string-other: var(--alizarin);
+  --hl-string-regex: var(--alizarin);
+  --hl-string-single: var(--alizarin);
+  --hl-string-symbol: var(--alizarin);
+  --hl-macro: var(--alizarin);
+  --hl-core-fn: var(--venice);
+  --hl-variable: var(--venice);
+  --hl-number: var(--venice);
+  --hl-s-exp: var(--alizarin);
   --hl-special-form: var(--lucky);
-  --hl-reader-char: var(--alizarin-crimson);
-  --hl-nil: var(--venice-blue);
-  --hl-repeat: var(--alizarin-crimson);
-  --hl-regexp: var(--alizarin-crimson);
+  --hl-reader-char: var(--alizarin);
+  --hl-nil: var(--venice);
+  --hl-repeat: var(--alizarin);
+  --hl-regexp: var(--alizarin);
   --hl-exception: var(--lucky);
   --hl-boolean: var(--lucky);
-  --hl-character: var(--venice-blue);
+  --hl-character: var(--venice);
   --hl-conditional: var(--lucky);
 }
