--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -116,9 +116,8 @@ a:hover, .clickable:hover {
 .text-content h2,
 .text-content h3,
 .text-content h4 {
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Merriweather", "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 500;
-
 }
 
 .text-content h1,
@@ -131,7 +130,7 @@ a:hover, .clickable:hover {
 
 .h1,
 .text-content h1 {
-  font-size: 2.6rem;
+  font-size: 2rem;
   line-height: 1.2;
 }
 
@@ -205,7 +204,6 @@ a:hover, .clickable:hover {
   color: var(--byline-color);
 }
 
-/* Teasers, v2 */
 @media only screen and (min-width: 768px) {
   .teaser {
     display: flex;
@@ -378,29 +376,46 @@ body .text-content :last-child {
   }
 }
 
-
 .banana-header {
     display: flex;
     align-items: center;
-    max-width: 1266px;
-    margin: 0 auto;
+    justify-content: center;
+    text-align: center;
 }
 
-/* 340 x 453 */
+@media only screen and (max-width: 767px) {
+    .banana-h1 {
+        font-size: 3rem;
+        line-height: 1;
+    }
+}
+
+.banana-h1 {
+    letter-spacing: -0.036em;
+}
 
 .banana-1,
 .banana-2 {
-    width: 68px;
-    height: 91px;
     background: url('../images/banan.png');
-    background-size: 68px 91px;
+    --factor: 0.2;
+    --banana-w: calc(340px * var(--factor));
+    --banana-h: calc(453px * var(--factor));
+    width: var(--banana-w);
+    height: var(--banana-h);
+    background-size: var(--banana-w) var(--banana-h);
 }
 .banana-1 {
     transform: rotate(185deg);
     margin-top: -5px;
+    margin-right: -10px;
 }
 .banana-2 {
     margin-top: 5px;
+    margin-left: -10px;
+}
+
+.slogan {
+    font-size: 0.75rem;
 }
 
 @media only screen and (min-width: 768px) {
@@ -409,8 +424,8 @@ body .text-content :last-child {
     line-height: 1.5;
   }
 
-  .h1, .text-content h1 {font-size: 3.5rem;}
-  .h2, .text-content h2 {font-size: 2.5rem;}
+  .h1, .text-content h1 {font-size: 2.75rem;}
+  .h2, .text-content h2 {font-size: 2.25rem;}
   .h3, .text-content h3 {font-size: 2rem;}
   .h4, .text-content h4 {font-size: 1.5rem;}
   .h5, .text-content h5 {font-size: 1.25rem; }
@@ -466,23 +481,33 @@ body .text-content :last-child {
   .banana-header { padding-bottom: 5px; }
   .banana-1,
   .banana-2 {
-      width: 85px;
-      height: 113px;
-      background: url('../images/banan.png');
-      background-size: 85px 113px;
+      --factor: 0.32;
+      --banana-w: calc(340px * var(--factor));
+      --banana-h: calc(453px * var(--factor));
+      width: var(--banana-w);
+      height: var(--banana-h);
+      background-size: var(--banana-w) var(--banana-h);
   }
   .banana-1 {
       transform: rotate(185deg);
       margin-top: -10px;
+      margin-right: -25px;
   }
   .banana-2 {
       margin-top: 10px;
+      margin-left: -25px;
+  }
+  .slogan {
+      font-size: 0.85rem;
+  }
+  .banana-h1 {
+      font-size: 3.5rem;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .h1, .text-content h1 {font-size: 4rem; line-height: 1;}
-  .h2, .text-content h2 {font-size: 3rem; line-height: 1.1;}
+  .h1, .text-content h1 {font-size: 3.2rem; line-height: 1;}
+  .h2, .text-content h2 {font-size: 2.5rem; line-height: 1.1;}
 
   .codehilite code {padding: 28px;}
   .codehilite {font-size: 0.9rem; line-height: 1.3;}
@@ -499,16 +524,27 @@ body .text-content :last-child {
   .banana-header { padding-bottom: 10px; }
   .banana-1,
   .banana-2 {
-      width: 113px;
-      height: 151px;
-      background: url('../images/banan.png');
-      background-size: 113px 151px;
+      --factor: 0.4;
+      --banana-w: calc(340px * var(--factor));
+      --banana-h: calc(453px * var(--factor));
+      width: var(--banana-w);
+      height: var(--banana-h);
+      background-size: var(--banana-w) var(--banana-h);
   }
   .banana-1 {
       transform: rotate(185deg);
-      margin-top: -20px;
+      margin-top: -10px;
+      margin-right: -30px;
   }
   .banana-2 {
       margin-top: 20px;
+      margin-left: -30px;
+  }
+  .banana-h1 {
+      font-size: 4rem;
+  }
+  .slogan {
+      font-size: 0.95rem;
+      margin-top: 5px;
   }
 }
