--- a/resources/public/css/vars.css
+++ b/resources/public/css/vars.css
@@ -14,6 +14,7 @@
   --fg-color: var(--smoky);
   --section-bg: #fff;
   --section-fg: var(--smoky);
+  --blockquote-bg: var(--mysterio);
   --link-color: var(--venice);
   --code-bg: var(--spring-wood);
   --code-contrast: var(--lucky);
