--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -662,3 +662,27 @@ body .text-content :last-child {
 .mtm {margin-top: 24px}
 .mtl {margin-top: 32px}
 .mtxl {margin-top: 48px}
+
+.video-responsive {
+    position: relative;
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.video-responsive::before {
+    display: block;
+    content: "";
+    padding-top: 56.25%;
+}
+
+.video-responsive-item {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
