Reduser fokus på publiseringsdato ved å flytte til slutten

--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -669,6 +669,7 @@ body .text-content :last-child {
 .mtm {margin-top: 24px}
 .mtl {margin-top: 32px}
 .mtxl {margin-top: 48px}
+.mtxxl {margin-top: 64px}
 .mbxs, .text-content .mbxs {margin-bottom: 8px}
 .mbs, .text-content .mbs {margin-bottom: 16px}
 .mbm, .text-content .mbm {margin-bottom: 24px}
