--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -527,7 +527,7 @@ body .text-content :last-child {
   .h1, .text-content h1, .text-content .h1 {font-size: 3.2rem; line-height: 1;}
   .h2, .text-content h2, .text-content .h2 {font-size: 2rem; line-height: 1.1;}
 
-  .codehilite code {padding: 28px;}
+  .codehilite code, .codelike {padding: 28px;}
   .codehilite {font-size: 0.9rem; line-height: 1.3;}
 
   .centered {padding: 3rem 0; text-align: center;}
