--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -318,6 +318,11 @@ a:hover .anchor-marker {
   margin: 2.4rem 0 1.5rem;
 }
 
+.text-content .h4,
+.text-content h4 {
+    margin: 1.8rem 0 -0.3rem;
+}
+
 .text-content .h3,
 .text-content .h4,
 .text-content .h5,
