--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -362,26 +362,15 @@ body .text-content :last-child {
   padding: 1.5rem 0;
 }
 
-/* Image media */
-.media .img {
-  display: block;
-  margin: 0 auto;
+/* Media */
+.media-front {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
-/* Media left/above */
-.media-front .media {
-  margin-bottom: 2.4rem;
-}
-
-/* Media right/below */
-.media-back .content {
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.media-back .media {
-  margin-top: 2.4rem;
-}
+/* Header */
 
 .header.section {
     background: var(--header-bg);
@@ -467,12 +456,14 @@ body .text-content :last-child {
     padding: 30px 20px;
   }
 
-  .media-front .content {display: flex;}
-  .media-front .media, .media-back .media {flex: 1 0 250px; margin: 4.5rem 1.5rem 0 0;}
-  .media-front .section-content, .media-back .section-content {flex: 1 1 350px; max-width: 600px;}
-  .media-back .content {flex-direction: row-reverse;}
+  .media-front {
+      flex-direction: row;
+  }
 
-  .media-back .media {margin-right: 0; margin-left: 1.5rem;}
+  .media-media {
+      flex-basis: 120px;
+      flex-shrink: 0;
+  }
 
   .teaser {
     display: flex;
@@ -482,16 +473,6 @@ body .text-content :last-child {
   .teaser-content {
     margin: 0;
     flex-direction: column;
-  }
-
-  .media + .teaser-content {
-    margin: 0 0 0 1rem;
-    max-width: calc(60% - 1rem);
-  }
-
-  .teaser .media {
-    margin: 0;
-    max-width: calc(40% - 1rem);
   }
 
   /* Split */
@@ -537,10 +518,10 @@ body .text-content :last-child {
 
   .centered {padding: 3rem 0; text-align: center;}
 
-  .media-front .content, .media-back .content {align-items: center;}
-  .media-front .media {margin: 0 3rem 0 -122px;}
-  .media-back .media {margin: 0 -122px 0 3rem;}
-  .media + .teaser-content {margin: 0 0 0 2rem;}
+  .media-media {
+      flex-basis: 180px;
+  }
+
   .teaser .h5 {display: block;}
   .footer-content {max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between; padding: 0 20px;}
 
