--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -250,6 +250,10 @@ a:hover, .clickable:hover {
   margin-right: 1rem;
 }
 
+.vcard .img + .img {
+  margin-left: -30px;
+}
+
 .text-content .vcard .vcard-title {
   margin: 0 0 0.5rem;
 }
