Legg til side animasjon på bananene

--- a/resources/public/css/parenteser.css
+++ b/resources/public/css/parenteser.css
@@ -1,6 +1,7 @@
 @import url("fonts.css");
 @import url("vars.css");
 @import url("syntax-highlight.css");
+@import url("view-transition.css");
 
 html,
 body {
